feat - added In-page navigation and items in the popup modal

--- a/src/Components/popup/popup.css
+++ b/src/Components/popup/popup.css
@@ -27,7 +27,9 @@
   padding: 20px 0;
   border-bottom: 1px dashed #bebfc5;
 }
-
+.headItem {
+  margin-left: 16px;
+}
 .modalClose {
   color: #b6b7bb;
   cursor: pointer;
