--- a/src/Components/popup/popup.css
+++ b/src/Components/popup/popup.css
@@ -12,7 +12,7 @@
 .popupModal {
   position: relative;
   top: -20px;
-  width: 60%;
+  width: 40%;
   background-color: rgb(255, 255, 255);
   margin: auto;
   animation: animatetop 0.3s forwards;
@@ -42,5 +42,22 @@
   to {
     top: -20px;
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .modalContainer {
+    padding-top: 66px;
+  }
+  .popupModal {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .modalContainer {
+    padding-top: 36px;
+  }
+  .popupModal {
+    width: 80%;
   }
 }
