--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow: hidden;
 }
-
-/* ::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
-} */
