style - changed popup modal height

--- a/src/Components/popup/popup.css
+++ b/src/Components/popup/popup.css
@@ -29,6 +29,10 @@
 .headItem {
   margin-left: 16px;
 }
+.heading {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
 .modalClose {
   color: #b6b7bb;
   cursor: pointer;
